apps/media/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
  labels:
    app: sonarr
spec:
  selector:
    matchLabels:
      app: sonarr
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
      volumes:
        - name: sonarr
          persistentVolumeClaim:
            claimName: sonarr
        - name: shows
          hostPath:
            path: /mnt/nas/Shows
        - name: movies
          hostPath:
            path: /mnt/nas/Movies
        - name: qb-downloads
          hostPath:
            path: /mnt/nas/qBittorrent
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8989
          volumeMounts:
            - name: sonarr
              mountPath: /config
            - name: shows
              mountPath: /mnt/nas/Shows
            - name: movies
              mountPath: /mnt/nas/Movies
            - name: qb-downloads
              mountPath: /mnt/nas/qBittorrent
